--- a/gb/20/4/10/n12019198.md
+++ b/gb/20/4/10/n12019198.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/avp264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/avp264/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/avp264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/avp264/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/avp264/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/avp264/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/avp264/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/avp264/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/avp264/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/avp264/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/avp264/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【梁厨美食】 在家烟熏、烘烤茶香鸡～齿颊留香</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/12-3-600x400.jpg" />
 <h6>在家用烤箱烘烤乌龙茶香鸡一点都不困难，大人小孩都喜欢，这是一道会齿颊留香的美食。（图：梁志生提供）
 </h6>
 <hr>
 	<h3>【小编语】</h3>
-<p>防疫期间在家时间变多，此时是展现厨艺的最佳时机，如果你想吃烤鸡、茶<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E7%86%8F%E9%B8%A1.md#1">熏鸡</a>只要跟着食谱的详细步骤制作就能实现。这一次梁厨为我们揭秘这一道“大菜”的制作过程，就算是厨房“新手”也能轻松驾驭，只要将鸡肉进行腌渍、蒸、烤（或熏）三个主要步骤就万事妥当！而且不用担心没有烤箱，有一个大炒锅就可以进行熏鸡了！不论烘烤或茶熏，最后鸡肉都会鲜嫩多汁，料理方式不同只是鸡皮酥脆口感会有所差异，但是都会是<b>齿颊留香</b>的好滋味。</p>
-<p><span style="color: #000080; font-size: 16px;">烘烤茶<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E9%A6%99%E9%B8%A1.md#1">香鸡</a></span></p>
+<p>防疫期间在家时间变多，此时是展现厨艺的最佳时机，如果你想吃烤鸡、茶<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%86%8F%E9%B8%A1.md#1">熏鸡</a>只要跟着食谱的详细步骤制作就能实现。这一次梁厨为我们揭秘这一道“大菜”的制作过程，就算是厨房“新手”也能轻松驾驭，只要将鸡肉进行腌渍、蒸、烤（或熏）三个主要步骤就万事妥当！而且不用担心没有烤箱，有一个大炒锅就可以进行熏鸡了！不论烘烤或茶熏，最后鸡肉都会鲜嫩多汁，料理方式不同只是鸡皮酥脆口感会有所差异，但是都会是<b>齿颊留香</b>的好滋味。</p>
+<p><span style="color: #000080; font-size: 16px;">烘烤茶<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A6%99%E9%B8%A1.md#1">香鸡</a></span></p>
 <h3>【材料】</h3>
 <p>新鲜鸡一只（Chicken）</p>
 <figure id="attachment_12019271" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/1-28.jpg"><img class="wp-image-12019271 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/04/1-28-450x338.jpg" alt="乌龙茶,梁厨美食,香鸡," width="450" b="338" /></a><figcaption class="wp-caption-text">（图：梁志生提供）</figcaption></figure>
@@ -46,7 +46,7 @@
 <figure id="attachment_12019291" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/10-6.jpg"><img class="size-medium wp-image-12019291" src="https://i.epochtimes.com/assets/uploads/2020/04/10-6-450x338.jpg" alt="乌龙茶,梁厨美食,香鸡" width="450" b="338" /></a><figcaption class="wp-caption-text">（图：梁志生提供）</figcaption></figure>
 <p>9. 取出稍为放凉之后，切块装盘便可上桌。</p>
 <figure id="attachment_12019293" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/11-11.jpg"><img class="size-medium wp-image-12019293" src="https://i.epochtimes.com/assets/uploads/2020/04/11-11-450x338.jpg" alt="乌龙茶,梁厨美食,香鸡" width="450" b="338" /></a><figcaption class="wp-caption-text">（图：梁志生提供）</figcaption></figure>
-<h3><span style="color: #000080;">烟熏茶<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E9%A6%99%E9%B8%A1.md#1">香鸡</a></span></h3>
+<h3><span style="color: #000080;">烟熏茶<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A6%99%E9%B8%A1.md#1">香鸡</a></span></h3>
 <h3>【准备一些烟熏材料】</h3>
 <p>面粉5汤匙、白米2汤匙、茶叶1包倒出、黄糖2汤匙。</p>
 <h3>【作法】</h3>
@@ -65,36 +65,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/9/7/14/n2589742.md#1">谁吃了老街好菜(4)：香鸡排</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/9/11/7/n2714528.md#1">增强人体免疫6食品 绿茶鸡汤都上榜</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/18/11/19/n10862265.md#1">茶香浓郁的传统茶熏鸡 做法竟如此简单</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/19/9/4/n11497868.md#1">【气炸锅料理】南瓜梅香鸡 让夏天胃口大开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/7/14/n2589742.md#1">谁吃了老街好菜(4)：香鸡排</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/11/7/n2714528.md#1">增强人体免疫6食品 绿茶鸡汤都上榜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/19/n10862265.md#1">茶香浓郁的传统茶熏鸡 做法竟如此简单</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/4/n11497868.md#1">【气炸锅料理】南瓜梅香鸡 让夏天胃口大开</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/avp264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10079307.md#1" target="_blank">林辉：周恩来主任秘书自杀 亲戚文革遭殃</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12013466.md#1">台染疫男童的9接触者有症状 部分检验结果出炉</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12014864.md#1">【靖远快评】冰岛病例藏信息 疫情将改变世界</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12014860.md#1">如何处理任志强 专家：习近平当局倍感棘手</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12014891.md#1">谭德塞再成为中共喉舌  美议员：信誉尽失</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12017276.md#1">塞尔维亚总统吻五星旗后 儿子确诊患肺炎</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/3/31/n11992880.md#1">婢女有情有义 代嫁后获命运青睐</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12014127.md#1">工匠未见过佛 如何能雕刻出佛之庄严宝像</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/7/n12011418.md#1">【历史上的瘟疫】夺走两位君王性命的大瘟疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017675.md#1">中共内外交困 前人大教授：王沪宁把习吹晕了</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017276.md#1">塞尔维亚总统吻五星旗后 儿子确诊患肺炎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018161.md#1">川普问“哪来的” 上海党媒记者称“来自台湾”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12018467.md#1">【拍案惊奇】北京连发地震是人为？山东罕见雪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12020333.md#1">欧盟公布台湾口罩抵达画面 中华民国国旗登官网</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018357.md#1">美国娱乐圈遭重创 一周内九位明星染疫过世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12016763.md#1">李明依罹甲状腺癌 动刀切除恶性肿瘤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938424.md#1">强大善能量 猛兽蝗虫神奇证验</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12014127.md#1">工匠未见过佛 如何能雕刻出佛之庄严宝像</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/6/n12007048.md#1">未来的人们都将在善恶间抉择——1950年宋美龄《在纽约向全美广播演说》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/7/n12011418.md#1">【历史上的瘟疫】夺走两位君王性命的大瘟疫</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/avp264/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/avp264/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/10/n12019198.htm">【梁厨美食】 在家烟熏、烘烤茶香鸡～齿颊留香</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/10/n12019198.htm">【梁厨美食】 在家烟熏、烘烤茶香鸡～齿颊留香</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/avp264/djy/blob/master/gb/20/4/10/n12019198.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/avp264/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/avp264/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/avp264/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12019198.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
